Test Org - Speridian/src/objects/BA_Group_Eligibilty__c.object
<CustomObject>
    <fields>
        <fullName>ba_CreatedBy__c</fullName>
        <label>Created</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ba_ParentGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Eligibility</relationshipLabel>
        <relationshipName>Group_Eligibility</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_SequenceNumber__c</fullName>
        <displayFormat>SEQ-{0000}</displayFormat>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Eligibility</label>
    <nameField>
        <displayFormat>GE-{0000}</displayFormat>
        <label>Group Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>